--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -30,7 +30,7 @@ de:
     Marlena Schultz-Brunn:
       job:
         - Fundraising und Förderungsmöglichkeiten
-        - Organisation und Gestaltung der Rahmenveranstaltungen im Jubiläumsjahr (Rathausempfang und Empfang beim Bundespräsidenten)
+        - Organisation und Gestaltung der Rahmenveranstaltungen im Jubiläumsjahr
         - Einbindung der Freunde und Förderer, die dem Verein nahestehen oder mit YFU kooperieren
       introduction: »Austausch wirkt, weil jeder Einzelne die (YFU-)Welt ein kleines bisschen besser macht!«
     Monika Keßler:
@@ -50,7 +50,7 @@ de:
       introduction: »Austausch wirkt, weil durch das Aufeinandertreffen von Personen unterschiedlicher kultureller Prägung ein Verständigungsprozess gefördert und Bewusstsein für Diversität geschaffen wird, welche die Grundsteine für ein friedvolles, verantwortungsbewusstes und auf Respekt basierendes Zusammenleben bilden.«
     Simone Stepp:
       job:
-        - Organisation und Gestaltung der Rahmenveranstaltungen im Jubiläumsjahr (Rathausempfang und Empfang beim Bundespräsidenten)
+        - Organisation und Gestaltung der Rahmenveranstaltungen im Jubiläumsjahr
         - Mitgestaltung des Festaktes
         - Einbindung der Alumni, deren Austauschjahr schon etwas länger her ist
       introduction: »Ich bin Teil des Teams, da ich gerne dabei mithelfen möchte, dass das 60ste YFU-Jubiläum ein großartiges Erlebnis für Ehrenamtliche, Ehemalige und Freunde des Vereins jeden Alters wird.«
