--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -31,7 +31,7 @@ en:
     Marlena Schultz-Brunn:
       job:
         - Fundraising and sponsorships
-        - organisation und presentation of satellite events (Town Hall reception and reception with the Federal President)
+        - organisation und presentation of satellite events
         - involvement of YFU friends and sponsors
       introduction: “Austausch wirkt, weil jeder Einzelne die (YFU-)Welt ein kleines bisschen besser macht!”
     Monika Keßler:
@@ -51,7 +51,7 @@ en:
       introduction: “Austausch wirkt, weil durch das Aufeinandertreffen von Personen unterschiedlicher kultureller Prägung ein Verständigungsprozess gefördert und Bewusstsein für Diversität geschaffen wird, welche die Grundsteine für ein friedvolles, verantwortungsbewusstes und auf Respekt basierendes Zusammenleben bilden.”
     Simone Stepp:
       job:
-        - Organisation and presentation of satellite events (city hall reception and reception with the Federal President)
+        - Organisation and presentation of satellite events
         - anniversary reception
         - involvement of YFU alumni
       introduction: “Ich bin Teil des Teams, da ich gerne dabei mithelfen möchte, dass das 60ste YFU-Jubiläum ein großartiges Erlebnis für Ehrenamtliche, Ehemalige und Freunde des Vereins jeden Alters wird.”
