Teamtext Henning EN

--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -28,6 +28,7 @@ en:
         - Homepage
         - IT
       introduction: “Austausch wirkt, weil wir nie auslernen und Verständigung und Verständnis überall gebraucht wird.”
+      introduction: “Exchange makes an impact, because we will never stop learning, and because understanding each other is needed everywhere.”
     Marlena Schultz-Brunn:
       job:
         - Fundraising and sponsorships
