--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -22,7 +22,7 @@ en:
       job:
         - Content-related planning
         - workshops
-      introduction: “Ich bin Teil des Teams, um mit coolen Leuten zusammen dem Jubiläum Leben zu verleihen.”
+      introduction: "“I'm part of the team to enliven this anniversary - not alone, but together with other cool people.”"
     Henning Perl:
       job:
         - Homepage
@@ -33,7 +33,7 @@ en:
         - Fundraising and sponsorships
         - organisation und presentation of satellite events
         - involvement of YFU friends and sponsors
-      introduction: “Austausch wirkt, weil jeder Einzelne die (YFU-)Welt ein kleines bisschen besser macht!”
+      introduction: “Exchange makes an impact, because everyone makes the (YFU-) world a better place!”
     Monika Keßler:
       job:
         - Finance
@@ -58,7 +58,7 @@ en:
     Stefan Timmermann:
       job:
         - BUT organisation
-      introduction: “Für die nächsten 60 Jahre YFU wünsche ich mir, dass weiterhin viele einzigartige Austauschgeschichten geschrieben werden.”
+      introduction: “For the next 60 years I hope that we will continue to write one unique exchange story after another.”
     Yannic Schelletter:
       job:
         - Finance
