--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -62,4 +62,4 @@ de:
       job:
         - Finanzen
         - BUT-Organisation
-      introduction: »Austausch wirkt, weil er nachhaltig in jungen Menschen etwas verändert und somit auch in der Gesellschaft. Die Lernchancen des Austauschs sind die beste Möglichkeit, die Bedeutung von interkultureller Verständigung, Respekt und Toleranz zu verstehen und zu leben.«
+      introduction: »Austausch wirkt, weil er nachhaltig in jungen Menschen etwas verändert und somit auch in der Gesellschaft.«
