--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -63,4 +63,4 @@ en:
       job:
         - Finance
         - BUT organisation
-      introduction: “Austausch wirkt, weil er nachhaltig in jungen Menschen etwas verändert und somit auch in der Gesellschaft. Die Lernchancen des Austauschs sind die beste Möglichkeit, die Bedeutung von interkultureller Verständigung, Respekt und Toleranz zu verstehen und zu leben.”
+      introduction: “Exchange makes an impact, because it changes young people sustainably and therefore moreover our society.”
