--- a/config/locales/index.en.yml
+++ b/config/locales/index.en.yml
@@ -1,7 +1,7 @@
 en:
   index:
     teaser_html: |
-      With the 60<sup>th</sup> anniversary of <strong>YFU Germany</strong> we also celebrate many individuals and their diverse engagement for learning in society. YFU volunteers and staff from six decades and close to sixty countries share many experiences and stories. Insights gained through exchange motivate us to advance intercultural understanding, mutural respect, and social responsibility.<br>Our <strong>Anniversary Conference in Berlin, 15.&ndash;18. June 2017</strong>, demonstrates that in many facets.
+      With the 60<sup>th</sup> anniversary of <strong>YFU Germany</strong> we also celebrate many individuals and their diverse engagement for learning in society. YFU volunteers and staff from six decades and close to sixty countries share many experiences and stories. Insights gained through exchange motivate us to advance intercultural understanding, mutual respect, and social responsibility.<br>Our <strong>Anniversary Conference in Berlin, 15.&ndash;18. June 2017</strong>, demonstrates that in many facets.
     we want you_html: |
       we want <strong>you</strong> to<br>make an <strong>impact!</strong>
     exchange stories make an impact:
