--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -51,10 +51,10 @@ en:
       introduction: “Austausch wirkt, weil durch das Aufeinandertreffen von Personen unterschiedlicher kultureller Prägung ein Verständigungsprozess gefördert und Bewusstsein für Diversität geschaffen wird, welche die Grundsteine für ein friedvolles, verantwortungsbewusstes und auf Respekt basierendes Zusammenleben bilden.”
     Simone Stepp:
       job:
-        - Organisation and presentation of satellite events
-        - anniversary reception
-        - involvement of YFU alumni
-      introduction: “Ich bin Teil des Teams, da ich gerne dabei mithelfen möchte, dass das 60ste YFU-Jubiläum ein großartiges Erlebnis für Ehrenamtliche, Ehemalige und Freunde des Vereins jeden Alters wird.”
+        - Organize and plan the festivities during the anniversary year
+        - co-create the ceremonial act
+        - to tie in those Alumni whose exchange year already is quite some time ago.
+      introduction: "“I am part of the team because I strongly wish to aid in making YFU's 60 year anniversary a magnificent event for volunteers, alumni, and friends of the organisation alike.”"
     Stefan Timmermann:
       job:
         - BUT organisation
