--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -48,7 +48,7 @@ en:
     Simon Born:
       job:
         - Management
-      introduction: “Austausch wirkt, weil durch das Aufeinandertreffen von Personen unterschiedlicher kultureller Prägung ein Verständigungsprozess gefördert und Bewusstsein für Diversität geschaffen wird, welche die Grundsteine für ein friedvolles, verantwortungsbewusstes und auf Respekt basierendes Zusammenleben bilden.”
+      introduction: "“Exchange makes an impact, because it fosters intercultural understanding and an increased awareness of diversity, which are the foundation of a peaceful world with mutual respect and social responsibility.”"
     Simone Stepp:
       job:
         - Organize and plan the festivities during the anniversary year
