--- a/config/locales/but.en.yml
+++ b/config/locales/but.en.yml
@@ -5,3 +5,6 @@ en:
 
   timetable: Timetable
   timetable-introduction: Here you find the program of the 60th Anniversary 2017.
+
+  attributions: Attributions
+  attributions-introduction: 'We thank the following content creators for providing their work under a CreativeCommons license:'
