Designentwurf fertig umgesetzt

--- a/config/locales/but.de.yml
+++ b/config/locales/but.de.yml
@@ -88,3 +88,10 @@ de:
   other_transportation: "keine Angabe"
   public_transportation: "mit öffentlichen Verkehrsmitteln"
   car: "mit dem Auto"
+
+  The anniversary: Das Jubiläum
+  The motto: Das Motto
+
+  when: wann
+  where: wo
+  what: was
