--- a/config/locales/but.en.yml
+++ b/config/locales/but.en.yml
@@ -8,3 +8,7 @@ en:
 
   attributions: Attributions
   attributions-introduction: 'We thank the following content creators for providing their work under a CreativeCommons license:'
+
+  when: when
+  where: where
+  what: what
